# Advanced-topics-programming-hw2

./: .gitignore  CMakeLists.txt  HLD.md  README.md  bonus.txt  readme.txt  simulation_output.yaml  visualize_map.py
complex_scenario/: composition.yaml  mission_config.yaml  simulation_config.yaml
complex_scenario/drones/: drone_large.yaml  drone_medium.yaml  drone_small.yaml  drone_tiny.yaml
complex_scenario/lidars/: lidar_standard.yaml
data_maps/: empty_5x5x5.npy  hw1_case1.npy  hw1_case2.npy  hw1_case3.npy  hw1_case4.npy
docs/: HLD.md  HLD_old.md  map_comparison_docs.md
hw1/: CMakeLists.txt  CMakePresets.json  README.md  bonus.txt  vcpkg-configuration.json  vcpkg.json
hw1/Gtests/: CMakeLists.txt  test_main.cpp
hw1/edge_cases/: run_all_edge_cases.py
hw1/edge_cases/case1/: drone_config.txt  map_input.txt  mission_config.txt
hw1/edge_cases/case1/original_output/: map_output.txt  score.txt  simulation_log.txt
hw1/edge_cases/case2/: drone_config.txt  map_input.txt  mission_config.txt
hw1/edge_cases/case2/original_output/: map_output.txt  score.txt  simulation_log.txt
hw1/edge_cases/case3/: drone_config.txt  map_input.txt  mission_config.txt
hw1/edge_cases/case3/original_output/: map_output.txt  score.txt  simulation_log.txt
hw1/edge_cases/case4/: drone_config.txt  map_input.txt  mission_config.txt
hw1/edge_cases/case4/original_output/: map_output.txt  score.txt  simulation_log.txt
hw1/include/: Config.h  Drone.h  FileUtils.h  ILidarSensor.h  IMovementDriver.h  IPositionSensor.h  Logger.h  Map3D.h  MapExport.h  MockLidarSensor.h  MockMovementDriver.h  MockPositionSensor.h  ScanResult.h  SimulationConfig.h  StrongPosition3D.h
hw1/src/: Drone.cpp  FileUtils.cpp  Logger.cpp  Map3D.cpp  MapExport.cpp  MockLidarSensor.cpp  MockMovementDriver.cpp  MockPositionSensor.cpp  main.cpp
hw1_scenarios/: composition_case2.yaml  composition_case4.yaml
hw1_scenarios/drones/: agile.yaml  cautious.yaml
hw1_scenarios/lidars/: long_range.yaml  short_range.yaml
hw1_scenarios/missions/case2/: full_corridor.yaml  left_half.yaml
hw1_scenarios/missions/case4/: full_map.yaml
hw1_scenarios/simulations/: case2.yaml  case4.yaml
include/drone_mapper/: DroneControlImpl.h  IMap3D.h  IMappingAlgorithm.h  ISimulation.h  ISimulationRun.h  Logger.h  Map3DImpl.h  MappingAlgorithmImpl.h  MockLidar.h  MockMovement.h  SimulationManager.h  SimulationRunFactoryImpl.h  SimulationRunImpl.h  YamlConfig.h
include/drone_mapper/types/: DroneTypes.h  LidarTypes.h  MapTypes.h  MissionTypes.h  SimulationTypes.h
output/output_results/: output_map_2.npy  output_map_4.npy
output_case2/: simulation_output.yaml
output_case2/output_results/: output_map_0.npy  output_map_2.npy
output_case4/: simulation_output.yaml
output_case4/output_results/: error_log.txt  output_map_0.npy  output_map_1.npy  output_map_2.npy  output_map_3.npy
output_results/: error_log.txt  output_map_0.npy  output_map_1.npy  output_map_2.npy  output_map_3.npy  output_map_mock.npy
src/: DroneControlImpl.cpp  Logger.cpp  Map3DImpl.cpp  MappingAlgorithmImpl.cpp  MapsComparison.cpp  MissionControlImpl.cpp  MockGPS.cpp  MockLidar.cpp  MockMovement.cpp  ScanResultToVoxels.cpp  SimulationManager.cpp  SimulationRunFactoryImpl.cpp  SimulationRunImpl.cpp  YamlConfig.cpp  drone_mapper_simulation_main.cpp  maps_comparison_main.cpp
tests/components/: DroneControl_test.cpp  Map3DImpl_test.cpp  MappingAlgorithm_test.cpp  MapsComparison_test.cpp  MissionControl_test.cpp  SimulationManager_test.cpp  SimulationRunFactory_test.cpp  SimulationRun_test.cpp  drone_control_test.cpp  mapping_algorithm_test.cpp  maps_comparison_test.cpp  mission_control_test.cpp  mocklidar_test.cpp  simulation_manager_test.cpp  simulation_run_test.cpp
tests/integration/: benchmark_map_test.cpp  cartesian_product_test.cpp  error_handling_tests.cpp  full_flow_mock_mapping.cpp  full_flow_real_mapping.cpp  hw1_edge_cases_test.cpp  integration_tests.cpp  staff_inputs_test.cpp
